# cellular_automata

catlib/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
catlib/models/FHP-MP/: README.md  fhpmp.hpp  fhpmp_sim.cpp
catlib/models/FHP-MP/postprocessor/: fhpaverage.cpp  fhpmisc.cpp  fhpphys.cpp
catlib/models/FHP-MP/postprocessor/include/: ObjImage.h
catlib/models/FHP-MP/postprocessor/iniparser/: dictionary.cpp  iniparser.h
catlib/models/FHP-MP/preprocessor/: configParser.cpp  configParser.h  fhpmp.hpp
catlib/models/HPP_seismic_waves/: run_script  run_script copy  seismic_waves.h  seismic_waves_post.c  seismic_waves_prep.c  seismic_waves_sim.c
catlib/models/game_of_life/: CMakeLists.txt  game_of_life.h  game_of_life_post.c  game_of_life_prep.c  game_of_life_sim.c
catlib/models/my_model/: README.md  seismic_waves.h  seismic_waves_post.c  seismic_waves_prep.c  seismic_waves_sim.c
catlib/models/seismic_waves/: CMakeLists.txt  seismic_waves.h  seismic_waves_post.c  seismic_waves_prep.c  seismic_waves_sim.c
catlib/models/spring_seismic_waves/: CMakeLists.txt  seismic_waves.h  seismic_waves_post.c  seismic_waves_prep.c  seismic_waves_sim.c
catlib/src/: catfile.h  catlib.h  catparallel.c  topology.h
catlib/src/topologies/: line.c  line.h  square24.c  square4.c  square4.h  square8.c
catlib/tests/: README.md  build.sh
models/FHP-MP/: CMakeLists.txt  fhpmp.hpp  fhpmp_prep.cpp  fhpmp_sim.cpp  postprocessor.conf
models/FHP-MP/postprocessor/: fhpcoord.cpp  fhpgraph.cpp  fhpio.cpp  fhpmisc.cpp  fhpphys.cpp  fhpvisual.cpp
models/FHP-MP/postprocessor/include/: ObjImage.h
models/FHP-MP/preprocessor/: fhpmp.hpp  fhpmp_prep.cpp  input.conf
models/game_of_life/: game_of_life.h  game_of_life_post.c  game_of_life_sim.c
models/seismic_waves/: CMakeLists.txt  seismic_waves_post.c  seismic_waves_prep.c  seismic_waves_sim.c
src/: catfile.c  catfragment.c  catfragment.h  catglobals.h  catlib.c  catlzma.c  catlzma.h  catparallel.h
src/topologies/: cube12.c  cube12.h  hexagon.c  hexagon.h  square24.h  square8.h
tests/: CMakeLists.txt
